# pgit

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: publish.yml  test.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: branches.rs  format.rs  git.rs  ipc.rs  main.rs
src/lib/: bindings.ts  ipc.ts
src/lib/components/: commit-graph.svelte  commit.svelte  locations.svelte
src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte
src/routes/: +page.svelte
