[package]
name = "pgit"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# Pinning for tauri-specta support
tauri-build = { version = "=2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

git2 = { version = "0.19.0", features = ["vendored-openssl"] }
chrono = "0.4.31"

# Pinning for tauri-specta support
tauri = { version = "=2.0.0-beta.22", features = [] }
specta = "=2.0.0-rc.12"
tauri-specta = { version = "=2.0.0-rc.11", features = ["javascript", "typescript"] }
